fix contrast alt

--- a/src/app/components/welcome/welcome.component.css
+++ b/src/app/components/welcome/welcome.component.css
@@ -54,7 +54,7 @@
     width: 100%;
 }
 .button{
-    background-color: #4CAF50; 
+    background-color: #53449D; 
     border: none;
     color: white;
     padding: 15px 32px;
